<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".ErrorCoinsListFragment">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="142dp"
        android:contentDescription="@string/image_view_description"
        android:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:srcCompat="@drawable/bitcoinicon"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="viewEnd"
        android:theme="?attr/actionBarTheme"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Список криптовалют"
        app:titleTextColor="@color/black" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:visibility="invisible"
        app:checkedChip="@id/chipUSD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUSD"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:checkable="true"
            android:checked="true"
            android:clickable="true"
            android:ellipsize="none"
            android:focusable="true"
            android:text='@string/usd'
            android:textAlignment="center"
            android:textColor="@color/text_chip_checked"
            android:visibility="visible"
            app:checkedIcon="@null"
            app:checkedIconEnabled="false"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/background_chip_checked"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEUR"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text='@string/eur'
            android:textAlignment="center"
            android:textColor="@color/text_chip_checked"
            app:checkedIcon="@null"
            app:chipBackgroundColor="@color/background_chip_checked"
            app:chipMinTouchTargetSize="48dp" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textViewErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif"
        android:text="@string/error_text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_orange"
        android:text="@string/retry_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>